frontend - fix y styles: se soluciono overflow en el html causado por Autosugerencia. Se actualizaron los estilos de las tablas de Resumen Producto

--- a/frontend/src/components/componentes_reutilizables/Autosugerencias/Autosugerencias.module.css
+++ b/frontend/src/components/componentes_reutilizables/Autosugerencias/Autosugerencias.module.css
@@ -1,5 +1,8 @@
 .hide, .hide *{
-    visibility: hidden;
+    /* Visibility hidden -> Rompe el layout, y se empieza a mostrar espacio en blanco al final del <html> */
+    /* visibility: hidden;  */
+    
+    display: none;
 }
 
 .autosugerenciasContainer{
